# swift-docc-symbolkit

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Package.swift  Package@swift-5.5.swift  README.md  openapi.yaml
.github/: pull_request_template.md
Documentation/: Package.swift
Sources/: CMakeLists.txt
Sources/SymbolKit/: CMakeLists.txt  Mixin.swift
Sources/SymbolKit/Mixin/: Mixin+Equals.swift  Mixin+Hash.swift  Mixin.swift
Sources/SymbolKit/SymbolGraph/: AnyScalar.swift  Metadata.swift  Module.swift  OperatingSystem.swift  Platform.swift  Relationship.swift  SemanticVersion.swift  SymbolGraph+OperatingSystem.swift  SymbolGraph+Overloads.swift  SymbolGraph+SemanticVersion.swift  SymbolGraph.swift
Sources/SymbolKit/SymbolGraph/LineList/: LineList.swift
Sources/SymbolKit/SymbolGraph/LineList/SourceRange/: SourceRange+Position.swift  SourceRange.swift
Sources/SymbolKit/SymbolGraph/Misc/: LineList.swift  SemanticVersion.swift  SemanticVersionError.swift  SemanticVersionPrerelease.swift
Sources/SymbolKit/SymbolGraph/Relationship/: ReferenceLocation.swift  Relationship+SourceOrigin.swift  Relationship.swift  RelationshipKind.swift
Sources/SymbolKit/SymbolGraph/Relationship/Swift/: Swift+GenericConstraints.swift  Swift.swift
Sources/SymbolKit/SymbolGraph/SemanticVersion/: Identifier Validation.swift  Prerelease.swift  SemanticVersion+Comparable.swift  SemanticVersion+CustomStringConvertible.swift  SemanticVersion.swift  SemanticVersionError.swift  SematicVerion+Codable.swift
Sources/SymbolKit/SymbolGraph/Symbol/: AccessControl.swift  AlternateDeclarations.swift  Identifier.swift  KindIdentifier.swift  Location.swift  Mutability.swift  Names.swift  OverloadData.swift  PlistDetails.swift  SPI.swift  Snippet.swift  Symbol+KindIdentifier.swift  Symbol+Location.swift  Symbol+Mutability.swift  Symbol.swift  SymbolKind.swift  ValueConstraints.swift
Sources/SymbolKit/SymbolGraph/Symbol/Availability/: Availability+AvailabilityItem.swift  Availability+Domain.swift  Availability.swift  Domain.swift
Sources/SymbolKit/SymbolGraph/Symbol/DeclarationFragments/: DeclarationFragments+Simplify.swift  DeclarationFragments.swift
Sources/SymbolKit/SymbolGraph/Symbol/DeclarationFragments/Fragment/: Fragment+Kind.swift  Fragment.swift
Sources/SymbolKit/SymbolGraph/Symbol/FunctionSignature/: FunctionParameter.swift  FunctionSignature.swift
Sources/SymbolKit/SymbolGraph/Symbol/HTTP/: HTTP.swift
Sources/SymbolKit/SymbolGraph/Symbol/Swift/: Extension.swift  GenericConstraint.swift  GenericParameter.swift  Generics.swift  Namespace.swift  Swift+Extension.swift  Swift+GenericConstraint.swift  Swift+GenericParameter.swift
Sources/SymbolKit/SymbolGraph/UnifiedSymbolGraph/: UnifiedSymbolGraph.swift
Sources/SymbolKit/SymbolKit.docc/: GraphFormatExtensions.md  SymbolKit.md
Sources/SymbolKit/UnifiedSymbolGraph/: GraphCollector.swift  UnifiedSymbol+Encodable.swift  UnifiedSymbol.swift  UnifiedSymbolGraph+Encodable.swift  UnifiedSymbolGraph+Overloads.swift  UnifiedSymbolGraph.swift
Sources/dump-unified-graph/: DumpUnifiedGraph.swift  main.swift
Tests/SymbolKitTests/LineList/: SemanticVersionTests.swift
Tests/SymbolKitTests/SymbolGraph/: AnyScalarTests.swift  ModuleTests.swift  PlatformTests.swift  SemanticVersionTests.swift  SymbolGraph+OverloadsTests.swift  SymbolGraphCreationTests.swift  SymbolGraphTests.swift  SymbolTests.swift
Tests/SymbolKitTests/UnifiedGraph/: CrossImportOverlaySymbolGraphs.swift  GraphCollectorTests.swift  UnifiedGraph+OverloadsTests.swift  UnifiedGraphTests.swift  UnifiedSymbolTests.swift
Tools/: Package.swift
cmake/modules/: CMakeLists.txt  SymbolKitConfig.cmake.in
docs/: metadata.json
docs/data/documentation/: symbolkit.json
(+425 files in other folders)
